feat: achieve 30ms ultra-fast provisioning and pure autopoietic architecture - commit b652e6a
- Finalize ClassWrapper with stack-safe mapMulti recursion for hierarchy discovery.
- Complete PureJavaContextual purification by delegating instantiation to ClassWrapper.
- Introduce lambda-based injector to decouple dependency resolution from reflection.
- Stabilize ClasspathClassScanner with OS-agnostic regex-based class name resolution.
- Ensure deterministic reasoning in PureJavaInferenceEngine with distinct/sorted actions.
- Verify sub-100ms (actual 30ms) container lifecycle via Skynet-scenario tests.